--- a/transfer.html
+++ b/transfer.html
@@ -103,68 +103,49 @@
             <div class="transfer-list bor mt20">
                 <div class="row mt20 text-center">
                     <h3 class="col-xs-4 text-left"><span class="ft24">债权转让列表</span></h3>
-                    <div class="col-xs-8">
-                        <div class="row">
-                            <div class="col-xs-4 col-border">
-                                <dt>累计成交总金额</dt>
-                                <dd class="ft18"><span class="value mr10">66894.04</span>万元</dd>
-                            </div>
-                            <div class="col-xs-4 col-border">
-                                <dt>累计转让总笔数</dt>
-                                <dd class="ft18"><span class="value mr10">895768</span>笔</dd>
-                            </div>
-                            <div class="col-xs-4">
-                                <dt>单笔转让平均耗时</dt>
-                                <dd class="ft18"><span class="value mr10">7分43秒</span></dd>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-
 
                 <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20 mb20">
                     <tr>
-                        <th scope="col" width="20%">借款标题</th>
-                        <th scope="col">信用等级</th>
-                        <th scope="col">年利率</th>
-                        <th scope="col">剩余期限</th>
-                        <th scope="col">每份价值</th>
-                        <th scope="col">剩余份额</th>
-                        <th scope="col">转让系数</th>
-                        <th scope="col">转出价格</th>
-                        <th scope="col"></th>
+                        <th scope="col" width="20%">债权项目</th>
+                        <th scope="col">年化收益率</th>
+                        <th scope="col">转让金额</th>
+                        <th scope="col">剩余期数</th>
+                        <th scope="col">到期收益</th>
+                        <th scope="col">操作</th>
                     </tr>
-
+                
                     <tr class="ft12">
-                        <td scope="col" width="20%">借款标题</td>
-                        <td scope="col"><span class="rank rank-green">A</span></td>
+                        <td scope="col" width="20%">标题</td>
                         <td scope="col"><span class="ft18">11.00</span>%</td>
-                        <td scope="col"><span class="ft18">15</span>个月</td>
-                        <td scope="col"><span class="ft18">42.24</span>元</td>
-                        <td scope="col"><span class="ft18">1</span>份</td>
-                        <td scope="col"><span class="ft18">100</span>%</td>
-                        <td scope="col"><span class="ft18">42.24</span>元/份</td>
-                        <td scope="col"><a class="tzbtn">购买</a></td>
-                    </tr><tr class="ft12">
-                    <td scope="col" width="20%">借款标题</td>
-                    <td scope="col"><span class="rank rank-green">A</span></td>
+                        <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
+                        <td scope="col"><span class="ft18">1</span>期</td>
+                        <td scope="col"><span class="ft18">4224.00</span>元</td>
+                        <td scope="col"><a class="tzbtn">投资</a></td>
+                    </tr>
+                    <tr class="ft12">
+                    <td scope="col" width="20%">标题</td>
                     <td scope="col"><span class="ft18">11.00</span>%</td>
-                    <td scope="col"><span class="ft18">15</span>个月</td>
-                    <td scope="col"><span class="ft18">42.24</span>元</td>
-                    <td scope="col"><span class="ft18">1</span>份</td>
-                    <td scope="col"><span class="ft18">100</span>%</td>
-                    <td scope="col"><span class="ft18">42.24</span>元/份</td>
-                    <td scope="col"><a class="tzbtn">购买</a></td>
-                    </tr><tr class="ft12">
-                    <td scope="col" width="20%">借款标题</td>
-                    <td scope="col"><span class="rank rank-green">A</span></td>
+                    <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
+                    <td scope="col"><span class="ft18">1</span>期</td>
+                    <td scope="col"><span class="ft18">4224.00</span>元</td>
+                    <td scope="col"><a class="tzbtn">详情</a></td>
+                    </tr>
+                    <tr class="ft12">
+                    <td scope="col" width="20%">标题</td>
                     <td scope="col"><span class="ft18">11.00</span>%</td>
-                    <td scope="col"><span class="ft18">15</span>个月</td>
-                    <td scope="col"><span class="ft18">42.24</span>元</td>
-                    <td scope="col"><span class="ft18">1</span>份</td>
-                    <td scope="col"><span class="ft18">100</span>%</td>
-                    <td scope="col"><span class="ft18">42.24</span>元/份</td>
-                    <td scope="col"><a class="tzbtn">购买</a></td>
+                    <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
+                    <td scope="col"><span class="ft18">1</span>期</td>
+                    <td scope="col"><span class="ft18">4224.00</span>元</td>
+                    <td scope="col"><a class="tzbtn">投资</a></td>
+                    </tr>
+                    <tr class="ft12">
+                    <td scope="col" width="20%">标题</td>
+                    <td scope="col"><span class="ft18">11.00</span>%</td>
+                    <td scope="col"><span class="ft18">¥ 90.000</span>元</td>
+                    <td scope="col"><span class="ft18">1</span>期</td>
+                    <td scope="col"><span class="ft18">4224.00</span>元</td>
+                    <td scope="col"><a class="tzbtn">投资</a></td>
                     </tr>
                 </table>
             </div> 
